adds styling and some module functionality

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 		<div id="C2" class="board-space top right left"></div>
 		<div id="C3" class="board-space top left"></div>
 	</div>
-	
+	<script src="script.js"></script>
 </body>
 </html>
