adds ability to click to set icons

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
 	<div id="board">
-		<div id="A1" class="board-space bottom right"></div>
-		<div id="A2" class="board-space left bottom right"></div>
-		<div id="A3" class="board-space left bottom"></div>
-		<div id="B1" class="board-space top right bottom"></div>
-		<div id="B2" class="board-space top right bottom left"></div>
-		<div id="B3" class="board-space top bottom left"></div>
-		<div id="C1" class="board-space top right"></div>
-		<div id="C2" class="board-space top right left"></div>
-		<div id="C3" class="board-space top left"></div>
+		<div data-index="0" class="board-space bottom right"></div>
+		<div data-index="1" class="board-space left bottom right"></div>
+		<div data-index="2" class="board-space left bottom"></div>
+		<div data-index="3" class="board-space top right bottom"></div>
+		<div data-index="4" class="board-space top right bottom left"></div>
+		<div data-index="5" class="board-space top bottom left"></div>
+		<div data-index="6" class="board-space top right"></div>
+		<div data-index="7" class="board-space top right left"></div>
+		<div data-index="8" class="board-space top left"></div>
 	</div>
 	<script src="script.js"></script>
 </body>
