adds mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<div class="player-selection">
 			<div class="player-group fade-in fade-out">
 				<label for="X" class="player-header">X</label>
-				<input class="player-input" name="X" type="text" maxlength="25" placeholder="Player X">
+				<input class="player-input" name="X" type="text" maxlength="25" placeholder="Player X" required>
 				<button class="player-button">Submit</button>
 			</div>
 			<div class="player-group fade-in fade-out">
 				<label for="O" class="player-header">O</label>
-				<input class="player-input" name="O" type="text" maxlength="25" placeholder="Player O">
+				<input class="player-input" name="O" type="text" maxlength="25" placeholder="Player O" required>
 				<button class="player-button">Submit</button>
 			</div>
 		</div>
