--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 				<input class="player-input" name="X" type="text" maxlength="25" placeholder="Player X" required>
 				<button class="player-button">Submit</button>
 			</div>
-			<div class="player-group fade-in fade-out">
+			<div class="opponent-selection fade-out">
+				<h2 class="player-header opponent-o">O</h2>
+				<h2 class="opponent-header">Choose Opponent Type</h2>
+				<div class="button-group">
+					<button id="human">Human</button>
+					<button id="computer">Computer</button>
+				</div>
+			</div>
+			<div class="player-group fade-in second-group">
 				<label for="O" class="player-header">O</label>
 				<input class="player-input" name="O" type="text" maxlength="25" placeholder="Player O" required>
 				<button class="player-button">Submit</button>
