fixes player2 naming bug

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		<div class="player-selection">
 			<div class="player-group fade-in fade-out">
 				<label for="X" class="player-header">X</label>
-				<input class="player-input" name="X" type="text" maxlength="25" placeholder="Player X" required>
-				<button class="player-button">Submit</button>
+				<input class="player-input" name="X" type="text" maxlength="25" value="Player 1" required>
+				<button class="player-button player1-name-button">Submit</button>
 			</div>
 			<div class="opponent-selection fade-out">
 				<h2 class="player-header opponent-o">O</h2>
@@ -27,8 +27,8 @@
 			</div>
 			<div class="player-group fade-in second-group">
 				<label for="O" class="player-header">O</label>
-				<input class="player-input" name="O" type="text" maxlength="25" placeholder="Player O" required>
-				<button class="player-button">Submit</button>
+				<input class="player-input" name="O" type="text" maxlength="25" value="Player 2" required>
+				<button class="player-button player2-name-button">Submit</button>
 			</div>
 		</div>
 	</header>
